completed test suite
* completed tests (100% coverage)
* added `./test` script for quick local testing
* improved tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -2,12 +2,15 @@
 envlist = py36, py37, py38, black, coverage
 
 [testenv]
+passenv =
+    WGET_BINARY
+    ZIMWRITERFS_BINARY
 deps =
     pytest
     coverage
     pytest-cov
 commands =
-    pytest --cov=zimscraperlib --cov-report=term
+    pytest --runslow --runinstalled --cov=zimscraperlib --cov-report=term --cov-report term-missing
 
 [testenv:black]
 deps =
