--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ deps =
     pytest
     coverage
     pytest-cov
+    -r{toxinidir}/requirements.txt
 commands =
     pytest --runslow --runinstalled --cov=zimscraperlib --cov-report=term --cov-report term-missing
 
