--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ colorthief==0.2.1
 python-resize-image==1.1.*
 Babel==2.8
 file-magic>=0.4.0,<0.5
-libzim>=0.0.3.post0,<0.1
+libzim>=0.0.4,<0.1
 beautifulsoup4>=4.9.1,<4.10
