--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,14 +4,14 @@ on: [push, pull_request]
 
 jobs:
   unit-tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       max-parallel: 3
       matrix:
         python-version: [3.6, 3.7, 3.8]
     steps:
-      - name: install ffmpeg
-        run: sudo apt update && sudo apt install ffmpeg
+      - name: install ffmpeg and gifsicle
+        run: sudo apt update && sudo apt install ffmpeg gifsicle
       - name: add required locales for tests
         run: sudo locale-gen fr_FR.UTF-8 pt_BR.UTF-8 && sudo update-locale
       - uses: actions/checkout@v1
@@ -31,10 +31,10 @@ jobs:
         run: tox -e $toxpyv
 
   qa:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
-    - name: install ffmpeg
-      run: sudo apt update && sudo apt install ffmpeg
+    - name: install ffmpeg and gifsicle
+      run: sudo apt update && sudo apt install ffmpeg gifsicle
     - name: add required locales for tests
       run: sudo locale-gen fr_FR.UTF-8 pt_BR.UTF-8 && sudo update-locale
     - uses: actions/checkout@v1
