--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ libzim>=0.0.3.post0,<0.1
 beautifulsoup4>=4.9.1,<4.10
 lxml>=4.5.2,<4.6
 optimize-images==1.3.6
+# youtube-dl should be updated as frequently as possible
+youtube_dl
