Fix CI to use new GA way to set env
Since October, Github action deprecated set-env
This uses the new method to set the env required by tox

https://github.blog/changelog/2020-10-01-github-actions-deprecating-set-env-and-add-path-commands/
https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-commands-for-github-actions#environment-files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,10 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
+      - name: pyvar
+        run: echo "pyversion=${{ matrix.python-version }}" >> $GITHUB_ENV
       - name: set image name
-        run: echo ::set-env name=toxpyv::py$(echo "${matrix.python-version//\./}")
+        run: echo "toxpyv=py${pyversion//\./}" >> $GITHUB_ENV
       - name: verify envname
         run : echo $toxpyv
       - name: Install dependencies
