--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ colorthief==0.2.1
 python-resize-image==1.1.*
 Babel==2.8
 file-magic>=0.4.0,<0.5
-libzim>=0.0.3.post0,<0.1
+libzim>=0.1,<0.2
 beautifulsoup4>=4.9.1,<4.10
 lxml>=4.5.2,<4.6
 optimize-images==1.3.6
