--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ colorthief==0.2.1
 python-resize-image>=1.1.19,<1.2
 Babel>=2.9,<3.0
 file-magic>=0.4.0,<0.5
-libzim>=1.0.0,<1.1
+libzim>=1.0.0.dev0,<1.1
 beautifulsoup4>=4.9.3,<4.10
 lxml>=4.6.3,<4.7
 optimize-images>=1.3.6,<1.6
