--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
     -   id: isort
         args: ["--profile", "black", "--filter-files"]
 -   repo: https://github.com/psf/black
-    rev: "21.9b0"
+    rev: "22.3.0"
     hooks:
     -   id: black
 -   repo: https://gitlab.com/pycqa/flake8
