--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ commands =
 
 [testenv:black]
 deps =
-    black>=21.9b0,<22
+    black>=22.3.0,<23
 commands = black --check .
 
 [testenv:coverage]
