--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, py39, py310, py311, black, coverage
+envlist = py36, py37, py38, py39, py310, py311, black, isort, flake8, coverage
 
 [testenv]
 passenv =
@@ -15,8 +15,18 @@ commands =
 
 [testenv:black]
 deps =
-    black>=22.3.0,<23
+    black>=23.1.0,<24
 commands = black --check .
+
+[testenv:isort]
+deps =
+    isort>=5.12.0,<5.13
+commands = isort --profile black --check src tests
+
+[testenv:flake8]
+deps =
+    flake8>=6.0.0,<7.0
+commands = flake8 src --count --max-line-length=88 --statistics --extend-ignore=E203
 
 [testenv:coverage]
 passenv =
