--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,6 @@ libzim>=3.0.0,<3.1
 beautifulsoup4>=4.9.3,<4.10
 lxml>=4.6.3,<4.10
 optimize-images>=1.3.6,<1.6
+pillow==9.4.0            
 # youtube-dl should be updated as frequently as possible
 youtube_dl
