--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, py39, py310, py311, black, isort, flake8, coverage
+envlist = py37, py38, py39, py310, py311, black, isort, flake8, coverage
 
 [testenv]
 passenv =
