--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,4 @@ beautifulsoup4>=4.9.3,<4.10
 lxml>=4.6.3,<4.10
 optimize-images>=1.3.6,<1.6
 # youtube-dl should be updated as frequently as possible
-youtube_dl
+yt-dlp
