--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps =
     pytest-cov
     -r{toxinidir}/requirements.txt
 commands =
-    pytest --runslow --runinstalled --cov=zimscraperlib --cov-report=term --cov-report term-missing
+    pytest --runslow --runinstalled --cov=zimscraperlib --cov-report=term --cov-report term-missing {posargs}
 
 [testenv:black]
 deps =
