Specify Python version for isort because it can't run on 3.7 (which is used by default)

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ deps =
 commands = black --check .
 
 [testenv:isort]
+base_python=py38
 deps =
     isort>=5.12.0,<5.13
 commands = isort --profile black --check src tests
