--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py38, py39, py310, py311, py312, black, isort, flake8, coverage
+envlist = py38, py39, py310, py311, black, isort, flake8, coverage
 
 [testenv]
 passenv =
