--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,16 +8,16 @@ requires-python = ">=3.8,<3.13"
 description = "Collection of python tools to re-use common code across scrapers"
 readme = "README.md"
 dependencies = [
-  "iso639-lang==2.2.3",
-  "requests==2.31.0",
+  "iso639-lang>=2.2.3,<3.0",
+  "requests>=2.25.1,<3.0",
   "colorthief==0.2.1",
-  "python-resize-image==1.1.20",
-  "Babel==2.14.0",
-  "file-magic==0.4.1",
-  "libzim==3.4.0",
-  "beautifulsoup4==4.9.3", # upgrade to 4.10 and later to be done
-  "lxml==4.9.4", # upgrade to 4.10 and later to be done
-  "optimize-images==1.5.1",
+  "python-resize-image>=1.1.19,<1.2",
+  "Babel>=2.9,<3.0",
+  "file-magic>=0.4.0,<0.5",
+  "libzim>=3.4.0,<4.0",
+  "beautifulsoup4>=4.9.3,<4.10", # upgrade to 4.10 and later to be done
+  "lxml>=4.6.3,<4.10", # upgrade to 4.10 and later to be done
+  "optimize-images>=1.3.6,<1.6",
   # youtube-dl should be updated as frequently as possible
   "yt-dlp"
 ]
