--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,7 +113,7 @@ target-version = ['py38']
 [tool.ruff]
 target-version = "py38"
 line-length = 88
-src = ["src"]
+src = ["src", "contrib"]
 
 [tool.ruff.lint]
 select = [
@@ -235,7 +235,7 @@ exclude_lines = [
 ]
 
 [tool.pyright]
-include = ["src", "tests", "tasks.py"]
+include = ["contrib", "src", "tests", "tasks.py"]
 exclude = [".env/**", ".venv/**"]
 extraPaths = ["src"]
 pythonVersion = "3.8"
