--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,9 @@ dependencies = [
   "Babel>=2.9,<3.0",
   "python-magic>=0.4.3,<0.5",
   "libzim>=3.4.0,<4.0",
-  "beautifulsoup4>=4.9.3,<4.10", # upgrade to 4.10 and later to be done
-  "lxml>=4.6.3,<4.10", # upgrade to 4.10 and later to be done
-  "optimize-images>=1.3.6,<1.6",
+  "beautifulsoup4>=4.9.3,<5.0",
+  "lxml>=4.6.3,<6.0",
+  "optimize-images>=1.3.6,<2.0",
   # youtube-dl should be updated as frequently as possible
   "yt-dlp"
 ]
