--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ dev = [
 
 [project.scripts]
 fix_ogvjs_dist = "zimscraperlib.fix_ogvjs_dist:run"
+zimwriterfs = "zimwriterfs:entrypoint"
 
 [tool.hatch.version]
 path = "src/zimscraperlib/__about__.py"
