--- a/.github/workflows/Tests.yaml
+++ b/.github/workflows/Tests.yaml
@@ -41,6 +41,7 @@ jobs:
         if: matrix.python == '3.12'
         uses: codecov/codecov-action@v3
         with:
+          fail_ci_if_error: true
           token: ${{ secrets.CODECOV_TOKEN }}
 
   build_python:
