--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,20 +35,21 @@ scripts = [
   "invoke==2.2.0",
 ]
 lint = [
-  "black==24.3.0",
-  "ruff==0.3.3",
+  "black==24.4.2",
+  "ruff==0.4.9",
 ]
 check = [
-  "pyright==1.1.354",
+  "pyright==1.1.368",
+  "pytest==8.2.2",
 ]
 test = [
-  "pytest==8.1.1",
-  "pytest-mock==3.12.0",
-  "coverage==7.4.4",
+  "pytest==8.2.2",
+  "pytest-mock==3.14.0",
+  "coverage==7.5.3",
 ]
 dev = [
-  "pre-commit==3.6.2",
-  "debugpy==1.8.1",
+  "ipython==8.25.0",
+  "pre-commit==3.7.1",
   "zimscraperlib[scripts]",
   "zimscraperlib[lint]",
   "zimscraperlib[test]",
