--- a/pyproject.toml
+++ b/pyproject.toml
@@ -141,6 +141,7 @@ dependencies = [
   "pymdown-extensions==10.12",
   "mkdocs-gen-files==0.5.0",
   "mkdocs-literate-nav==0.6.1",
+  "black==24.10.0",
 ]
 
 [tool.hatch.envs.docs.scripts]
