--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,14 +8,10 @@ build:
   tools:
     python: '3.12'
 
-# Build documentation with Mkdocs
-mkdocs:
-  configuration: mkdocs.yml
-
-# Source requirements from docs env
-python:
-  install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - docs
+  # custom commands to run mkdocs build within hatch, as suggested by maintainer in
+  # https://github.com/readthedocs/readthedocs.org/issues/10706
+  commands:
+    - pip install hatch
+    - hatch run docs:build
+    - mkdir --parents $READTHEDOCS_OUTPUT
+    - mv site $READTHEDOCS_OUTPUT/html
