--- a/pyproject.toml
+++ b/pyproject.toml
@@ -279,6 +279,7 @@ exclude_lines = [
   "if __name__ == .__main__.:",
   "if TYPE_CHECKING:",
   "class .*Protocol.*",
+  "@abstractmethod",
 ]
 
 [tool.pyright]
