--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,15 @@ test = [
   "pytest-mock==3.14.0",
   "coverage==7.6.9",
 ]
+docs = [
+  "mkdocs==1.6.1",
+  "mkdocstrings[python]==0.27.0",
+  "mkdocs-material==9.5.44",
+  "pymdown-extensions==10.12",
+  "mkdocs-gen-files==0.5.0",
+  "mkdocs-literate-nav==0.6.1",
+  "mkdocs-include-markdown-plugin==7.1.2",
+]
 dev = [
   "ipython==8.30.0",
   "pre-commit==4.0.1",
@@ -75,6 +84,7 @@ dev = [
   "zimscraperlib[lint]",
   "zimscraperlib[test]",
   "zimscraperlib[check]",
+  "zimscraperlib[docs]",
 ]
 
 [project.scripts]
@@ -137,22 +147,11 @@ pyright = "inv check-pyright --args '{args}'"
 all = "inv checkall --args '{args}'"
 
 [tool.hatch.envs.docs]
-template = "docs"
-detached = true
-dependencies = [
-  "mkdocs==1.6.1",
-  "mkdocstrings[python]==0.27.0",
-  "mkdocs-material==9.5.44",
-  "pymdown-extensions==10.12",
-  "mkdocs-gen-files==0.5.0",
-  "mkdocs-literate-nav==0.6.1",
-  "mkdocs-include-markdown-plugin==7.1.2",
-  "black==24.10.0",
-]
+features = ["scripts", "docs"]
 
 [tool.hatch.envs.docs.scripts]
-serve = "mkdocs serve"
-build = "mkdocs build"
+serve = "inv docs-serve --args '{args}'"
+build = "inv docs-build --args '{args}'"
 
 [tool.black]
 line-length = 88
