Fix sdist content
Using 'artifacts' instead of 'include' because we do not want to
interfere with standard include rules but rather add few more items.

Using 'include' causes the sdist to be mostly empty.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,7 +107,7 @@ artifacts = [
 ]
 
 [tool.hatch.build.targets.sdist]
-include = [
+artifacts = [
   "src/zimscraperlib/rewriting/statics/**",
   "src/zimscraperlib/rewriting/rules.py",
   "tests/rewriting/test_fuzzy_rules.py",
