--- a/.github/workflows/Tests.yaml
+++ b/.github/workflows/Tests.yaml
@@ -56,7 +56,7 @@ jobs:
       - name: install ffmpeg and gifsicle
         run: sudo apt update && sudo apt install ffmpeg gifsicle
 
-      - name: Set up Python 3.12
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version-file: pyproject.toml
