--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 # jinja2 is required to generate JS and Python rules at build time
 # PyYAML is used to parse fuzzy rules and generate Python/JS code
-requires = ["hatchling", "hatch-openzim>=0.2", "jinja2==3.1.5", "PyYAML==6.0.2"]
+requires = ["hatchling", "hatch-openzim>=0.2", "jinja2==3.1.6", "PyYAML==6.0.2"]
 build-backend = "hatchling.build"
 
 [project]
@@ -26,11 +26,11 @@ dependencies = [
   "regex>=2020.7.14",
   "pymupdf>=1.24.0,<2.0",
   "CairoSVG>=2.2.0,<3.0",
-  "beartype==0.19.0",
+  "beartype>=0.19,<0.21",
   # youtube-dl should be updated as frequently as possible
   "yt-dlp",
   "pillow>=7.0.0,<12.0",
-  "urllib3>=1.26.5,<2.4.0",
+  "urllib3>=1.26.5,<2.5.0",
   "piexif==1.1.3", # this dep is a nightmare in terms of release management, better pinned just like in optimize-images anyway
   "idna>=2.5,<4.0",
   "xxhash>=2.0,<4.0",
@@ -52,36 +52,36 @@ scripts = [
   "invoke==2.2.0",
   # jinja2 is required to generate JS and Python rules at build time
   # PyYAML is used to parse fuzzy rules and generate Python/JS code
-  # also update version in build-system above and in build_js.sh
-  "jinja2==3.1.5",
+  # also update version in build-system above
+  "jinja2==3.1.6",
   "PyYAML==6.0.2",
 
 ]
 lint = [
   "black==25.1.0",
-  "ruff==0.9.6",
+  "ruff==0.11.8",
 ]
 check = [
-  "pyright==1.1.394",
-  "pytest==8.3.4",
+  "pyright==1.1.400",
+  "pytest==8.3.5",
 ]
 test = [
-  "pytest==8.3.4",
+  "pytest==8.3.5",
   "pytest-mock==3.14.0",
-  "coverage==7.6.12",
+  "coverage==7.8.0",
 ]
 docs = [
   "mkdocs==1.6.1",
-  "mkdocstrings[python]==0.28.1",
-  "mkdocs-material==9.6.4",
-  "pymdown-extensions==10.14.3",
+  "mkdocstrings[python]==0.29.1",
+  "mkdocs-material==9.6.12",
+  "pymdown-extensions==10.15",
   "mkdocs-gen-files==0.5.0",
-  "mkdocs-literate-nav==0.6.1",
-  "mkdocs-include-markdown-plugin==7.1.4",
+  "mkdocs-literate-nav==0.6.2",
+  "mkdocs-include-markdown-plugin==7.1.5",
 ]
 dev = [
-  "ipython==8.32.0",
-  "pre-commit==4.1.0",
+  "ipython==9.2.0",
+  "pre-commit==4.2.0",
   "zimscraperlib[scripts]",
   "zimscraperlib[lint]",
   "zimscraperlib[test]",
